Fix SonarQube issues: remove unused params, simplify lambdas, fix code quality in FunctionalStream
Agent-Logs-Url: https://github.com/Cloud-Solutions-International/antikythera/sessions/157b74c4-17be-425f-be44-ff08cde6329a

Co-authored-by: e4c5 <1635446+e4c5@users.noreply.github.com>